<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_for_centering_those_two_bastards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false">

            <FrameLayout
                android:id="@+id/logo_face_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/logo_image"
                    tools:ignore="ContentDescription"
                    android:layout_width="@dimen/acct__logo_small_size"
                    android:layout_height="@dimen/acct__logo_small_size"
                    android:clipChildren="false"
                    android:clipToPadding="false" />

                <com.expedia.account.view.AvatarView
                    android:id="@+id/user_image"
                    tools:ignore="ContentDescription"
                    android:layout_width="@dimen/acct__logo_small_size"
                    android:layout_height="@dimen/acct__logo_small_size"
                    android:focusable="true"
                    android:textSize="18sp" />
            </FrameLayout>

            <ImageView
                android:id="@+id/logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/special_messaging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/acct__logo_text_vertical_margin"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:ellipsize="end"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_info_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/acct__logo_small_size"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textSize="24sp"
            tools:text="HELLO FRIEND" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:ellipsize="end"
            android:focusable="true"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textSize="16sp"
            tools:text="DEAR@FRIEND.COM" />

    </LinearLayout>
</merge>
